# universal_robot

ath_demo/: CMakeLists.txt  package.xml
ath_demo/launch/: task1.launch  task2_chomp.launch  task2_ompl.launch
ath_demo/scene/: boxes.scene  ur3_coffee_table.scene
ath_demo/tests/: roslaunch_test.xml
ath_joint_planner_service/: CMakeLists.txt  README.md  package.xml
ath_joint_planner_service/src/: joint_planner_service.cpp
ath_msgs/: CMakeLists.txt  package.xml
ath_msgs/srv/: GetTrajectory.srv
task/: task1.txt  task2.txt  task3.txt
ur3_moveit_config/launch/: move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  ur3_moveit_planning_execution.launch
