<package format="2">
  <name>ath_msgs</name>
  <version>0.1.0</version>
  <description>Messages for artly demo</description>
  <author email="jalanatherton@gmail.com">Alan Atherton</author>
  <maintainer email="jalanatherton@gmail.com">Alan Atherton</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>moveit_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>object_recognition_msgs</depend>
  <depend>octomap_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
</package>
